--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+x.<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@
     <header class="headerC"><h1>To Kill A King</h1></header>
 
     <div class="buttonsC">
-        <div class="homeB"><a href="#">Inicio</a></div>
+        <div class="homeB"><a href="index.html">Inicio</a></div>
         <div class="aboutB"><a href="#aboutC">Sobre Nosotros</a></div>
         <div class="contactB"><a href="#contactC">Contacto</a></div>
     </div>
