--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ x.<!DOCTYPE html>
     <div class="buttonsC">
         <div class="homeB"><a href="index.html">Inicio</a></div>
         <div class="aboutB"><a href="#aboutC">Sobre Nosotros</a></div>
-        <div class="contactB"><a href="#contactC">Contacto</a></div>
+        <div class="contactB"><a href="#aboutC">Sobre Nosotros</a></div>
     </div>
 
     <div class="myEntryC" id="myEntryC">
