--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ x.<!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog_K</title>
+    <title>To Kill A King</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Source/law.ico" type="image/x-icon">
 </head>
