--- a/reseña.html
+++ b/reseña.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog_K</title>
+    <title>Reseña</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/Source/law.ico" type="image/x-icon">
 </head>
@@ -12,10 +12,10 @@
         <div class="headerC"><h1>To Kill A King</h1></div>
     
         <div class="buttonsC">
-            <div class="homeB">Inicio</div>
-            <div class="aboutB"><a href="#aboutC"></a>Sobre Nosotros</div>
-            <div class="contactB"><a href="#contactC"></a>Contacto</div>
-        </div>
+        <div class="homeB"><a href="index.html">Inicio</a></div>
+        <div class="aboutB"><a href="#aboutC">Sobre Nosotros</a></div>
+        <div class="contactB"><a href="#aboutC">Sobre Nosotros</a></div>
+    </div>
         
         <div class="reseña">
             <div class="reseñaT">
